--- a/settings.json
+++ b/settings.json
@@ -6,6 +6,24 @@
     "dist",
     ".git",
     ".venv",
-    ".gradle"
-  ]
+    ".gradle",
+    ".idea",
+    "build",
+    "FileContentIndex",
+    "__pycache__",
+    "static",
+    "v17",
+    ".vs",
+    ".vscode"
+  ],
+  "IGNORE_FILE_TYPES": [
+    ".pyc",
+    ".vsidx",
+    ".wsuo",
+    ".sqlite",
+    ".ds_store",
+    ".exe"
+  ],
+  "TREE_FILE": "project_tree.md",
+  "CONTENT_FILE": "project_content.json"
 }
